test/types/scalar/bradc/index-int.good
index-int.chpl:1: error: illegal type index expression
