test/types/scalar/bradc/index-int.chpl
writeln(int(64)(42));
